@@ -1,3 +1,7 @@
+2016-09-19  Oliver Lemke  <olemke@core-dump.info>
+
+	* typhon/math/stats.py (adev): Fix formula formatting and parameters.
+
 2016-09-19  Lukas Kluft  <lukas.kluft@gmail.com>
 
 	* typhon/plots/__init__.py: Removed install_mplstyles().
